# MyBill

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  MyBill.md  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/routes/: __init__.py  auth.py  health.py  receipts.py  search.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  responses.py  security.py
backend/app/integrations/: __init__.py  ocr.py  parser.py  supabase.py  tasks.py
backend/app/repositories/: __init__.py  parsed.py  receipts.py  reference.py  users.py
backend/app/schemas/: __init__.py  ocr.py  parser.py  receipt.py  user.py
backend/app/services/: __init__.py  normalisation.py  pipeline.py  receipts.py  users.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_normalisation.py  test_ocr.py  test_parser.py  test_pipeline.py  test_receipts.py  test_supabase.py  test_users.py  test_worker.py
infra/: docker-compose.yml
infra/supabase/: README.md
infra/supabase/migrations/: 20260716090000_init_extensions_and_helpers.sql  20260716090100_create_users.sql  20260716090200_auth_user_sync.sql  20260716090300_receipts_storage.sql  20260716093000_stores_and_receipts.sql  20260717120000_receipt_images.sql  20260717140000_ocr_tables.sql
infra/supabase/tests/: harness.sql  run_tests.sh  test_rls.sql
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/debug/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/lib/core/constants/: app_constants.dart
mobile/lib/core/network/: api_client.dart
mobile/lib/core/router/: app_router.dart
mobile/lib/core/storage/: secure_local_storage.dart
mobile/lib/core/theme/: app_theme.dart
mobile/lib/core/utils/: validators.dart
mobile/scripts/: run.sh
mobile/test/: bill_detail_test.dart  processing_controller_test.dart  scan_controller_test.dart  search_controller_test.dart  theme_test.dart  widget_test.dart
mobile/web/: index.html  manifest.json
(+23 files in other folders)
